# DataStructuresAndAlgorithms

./: CMakeLists.txt
basic_exercises/: CMakeLists.txt  basic_exercises.kdev4
basic_exercises/.kdev4/: basic_exercises.kdev4
basic_exercises/mb_algorithms/: CMakeLists.txt  mb_sorts.cpp  mb_sorts.h
basic_exercises/mb_algorithms/test/: CMakeLists.txt  mb_algorithms_test.cpp
basic_exercises/mb_ds/: CMakeLists.txt  mb_list.cpp  mb_list.h
basic_exercises/mb_ds/test/: CMakeLists.txt  mb_ds_tests.cpp
basic_exercises/userapp/: CMakeLists.txt  main.cpp
book_exercises/: assembly_line.cpp  counting_inversion.cpp  insertion_sort.cpp  linkedlist_palindrome.cpp  matrix_chain.cpp  merge_sort_corman_with_inf.cpp
